# simple-blockchain-course-work

./: .gitignore  CMakeLists.txt  config.json  gen_settings.json
archive/: crypto_signer.cpp  crypto_signer.hpp
include/: Block.hpp  BlockChain.hpp  MyRSA.h  client_http.hpp  common.hpp  crypto_signer.hpp
src/: MyRSA.cpp  crypto_signer.cpp  main.cpp
